--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="col-md-6 text-right">
 		{%if 'username' not in session %}
-        <a href="{{url_for('showLogin')}}">Click Here to Login </a> 
+        <a href="{{url_for('showLogin')}}">Login to your account here </a> 
         {% else %}
         <a href="{{url_for('disconnect')}}">Logout </a> {% endif %}
 	</div>
