radio button - checked
solved bad request error due to radio button not selected

--- a/templates/newmenuitem.html
+++ b/templates/newmenuitem.html
@@ -27,7 +27,7 @@
 					<label for="course">Course:</label>
 					<div class="radio">
 					  <label>
-					    <input type="radio" name="course" id="course1" value="Appetizer">Appetizer
+					    <input type="radio" name="course" id="course1" value="Appetizer" checked>Appetizer
 					  </label>
 					</div>
 					<div class="radio">
